--- a/data/css/style.css
+++ b/data/css/style.css
@@ -32,6 +32,7 @@
 
 #titre
 {
+  	font-family: "FredokaOne-Regular", serif;
 	text-align: center;
 	font-size: 45px;
 	text-decoration: underline;
@@ -66,15 +67,25 @@
 
 
 
+@font-face {
+  font-family: "FredokaOne-Regular";
+  src: url("FredokaOne-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Asap-Variable";
+  src: url("Asap-VariableFont_wght.ttf");
+}
+
+
 body {
+  	font-family: "Asap-Variable", serif;
 	background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 75.71%),
             linear-gradient(127deg, rgba(0,255,0,.8), rgba(0,255,0,0) 80.80%),
             linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 80.80%);
     user-select: none;
 
 }
-
-
 
 
 
